# sisci-nccl

./: .gitignore  LICENSE  README.md  configure.ac
src/: Makefile.am  sisci_nccl.c  sisci_nccl.h  sisciwrap.h
